feat: weather task

--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+
+    ],
+    "rules": {
+      "react/react-in-jsx-scope": "off",
+      "react/prop-types": "off",
+      "react/key": ""
+    }
   },
   "browserslist": {
     "production": [
